@@ -1,3 +1,6 @@
+[B]Version v2.4.4[/B]
+- Disabled Google Analytics by default. Later it settings might be provided.
+
 [B]Version v2.4.3[/B]
 - :) Again website change fix. Trying to keep things going.
 
